Update user endpoints
