# docs/swagger.json
@@ -915,7 +915,7 @@
                         "schema": {
                             "type": "array",
                             "items": {
-                                "$ref": "#/definitions/ent.User"
+                                "$ref": "#/definitions/rest.UserModel"
                             }
                         }
                     },
@@ -948,7 +948,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rest.CreateUser.UserInput"
+                            "$ref": "#/definitions/rest.UserInput"
                         }
                     }
                 ],
@@ -956,7 +956,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/ent.User"
+                            "$ref": "#/definitions/rest.UserModel"
                         }
                     },
                     "404": {
@@ -1010,7 +1010,7 @@
                     "200": {
                         "description": "OK",
                         "schema": {
-                            "$ref": "#/definitions/ent.User"
+                            "$ref": "#/definitions/rest.UserModel"
                         }
                     },
                     "404": {
@@ -1063,7 +1063,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/rest.UpdateUser.UserInput"
+                            "$ref": "#/definitions/rest.UserInput"
                         }
                     }
                 ],
@@ -1071,7 +1071,7 @@
                     "201": {
                         "description": "Created",
                         "schema": {
-                            "$ref": "#/definitions/ent.User"
+                            "$ref": "#/definitions/rest.UserModel"
                         }
                     },
                     "404": {
@@ -1971,41 +1971,6 @@
                 }
             }
         },
-        "rest.CreateUser.UserInput": {
-            "type": "object",
-            "required": [
-                "first_name",
-                "last_name",
-                "role",
-                "username"
-            ],
-            "properties": {
-                "first_name": {
-                    "type": "string",
-                    "example": "John"
-                },
-                "last_name": {
-                    "type": "string",
-                    "example": "Doe"
-                },
-                "role": {
-                    "type": "string",
-                    "enum": [
-                        "USER",
-                        "ADMIN"
-                    ],
-                    "example": "USER"
-                },
-                "user_to_team": {
-                    "type": "string",
-                    "example": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
-                },
-                "username": {
-                    "type": "string",
-                    "example": "compsole"
-                }
-            }
-        },
         "rest.ServiceLoginResult": {
             "type": "object",
             "properties": {
@@ -2116,7 +2081,8 @@
                 }
             }
         },
-        "rest.UpdateUser.UserInput": {
+        "rest.UserInput": {
+            "description": "Used as an input model for creating/updating Users",
             "type": "object",
             "required": [
                 "first_name",
@@ -2146,6 +2112,49 @@
                     "example": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
                 },
                 "username": {
+                    "type": "string",
+                    "example": "compsole"
+                }
+            }
+        },
+        "rest.UserModel": {
+            "description": "Used for User endpoints",
+            "type": "object",
+            "properties": {
+                "first_name": {
+                    "description": "[OPTIONAL] The display first name for the user.",
+                    "type": "string",
+                    "example": "Default"
+                },
+                "id": {
+                    "description": "Fields",
+                    "type": "string",
+                    "example": "xxxxxxxx-xxxx-xxxx-xxxx-xxxxxxxxxxxx"
+                },
+                "last_name": {
+                    "description": "[OPTIONAL] The display last name for the user.",
+                    "type": "string",
+                    "example": "User"
+                },
+                "role": {
+                    "description": "[REQUIRED] The role of the user. Admins have full access.",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/user.Role"
+                        }
+                    ],
+                    "example": "USER"
+                },
+                "user_to_team": {
+                    "description": "Edges",
+                    "allOf": [
+                        {
+                            "$ref": "#/definitions/rest.TeamEdge"
+                        }
+                    ]
+                },
+                "username": {
+                    "description": "[REQUIRED] The username for the user.",
                     "type": "string",
                     "example": "compsole"
                 }
